--- a/CPU.html
+++ b/CPU.html
@@ -38,17 +38,13 @@
 <head> Uitleg over de Werking van computer</head>
 <body>
 <p>1. Invoer (Input):</p>
-<p>Invoer is het eerste stadium van de computerwerking. Het omvat het verzamelen van gegevens en opdrachten van externe bronnen en ze naar de computer brengen. Dit proces wordt meestal uitgevoerd met behulp van invoerapparaten, zoals toetsenborden, muizen, microfoons, camera's, scanners en sensoren. Invoerapparaten zetten fysieke acties of gegevens om in elektrische signalen die de computer kan begrijpen.</p>
-
+<p>Invoer is het eerste stap van hoe een computer werkt. Het gaat om het verzamelen van gegevens en opdrachten van buitenaf en deze naar de computer sturen. Dit gebeurt meestal via invoerapparaten zoals toetsenborden, muizen, microfoons, camera's, scanners en sensoren. Deze apparaten zetten fysieke handelingen of gegevens om in elektrische signalen die de computer kan begrijpen.</p>
 <p>2. Uitvoer (Output):</p>
-<p>Uitvoer is het stadium waarin de resultaten van de verwerking aan de gebruiker worden getoond of naar externe apparaten worden gestuurd. Dit kan visuele, auditieve, tactiele of andere vormen van informatie zijn, afhankelijk van het soort gegevens dat wordt verwerkt en de doelen van het systeem. Uitvoerapparaten omvatten beeldschermen, luidsprekers, printers, enzovoort. Ze zetten elektrische signalen om in begrijpelijke informatie voor mensen of andere apparaten.</p>
-
+<p>Uitvoer is het moment waarop de resultaten van de verwerking aan de gebruiker worden getoond of naar andere apparaten worden gestuurd. Dit kan bijvoorbeeld visuele (zoals op een scherm), audio (zoals via geluid) of andere soorten informatie zijn, afhankelijk van wat het systeem doet. Voor uitvoer worden apparaten zoals beeldschermen, luidsprekers en printers gebruikt. Deze apparaten zetten elektrische signalen om in informatie die begrijpelijk is voor mensen of andere apparaten.</p>
 <p>3. Verwerking (Processing):</p>
-<p>Na de invoer volgt de verwerking. Dit is het hart van de computer, waar gegevens worden verwerkt en gemanipuleerd om de gewenste resultaten te produceren. Het belangrijkste component voor verwerking is de centrale verwerkingseenheid (CPU). De CPU voert instructies uit die zijn opgeslagen in het geheugen en voert berekeningen uit, neemt beslissingen en coördineert alle activiteiten binnen de computer. Software, zoals besturingssystemen en toepassingen, bepaalt welke specifieke taken de computer moet uitvoeren tijdens de verwerking.</p>
-
+<p> Na  invoer vindt verwerking plaats. Dit is het hart van de computer waar gegevens worden verwerkt om de gewenste resultaten te krijgen. Het belangrijkste verwerkingscomponent is de centrale verwerkingseenheid (CPU). De CPU voert instructies uit die  in het geheugen zijn opgeslagen, voert berekeningen uit, neemt beslissingen over alle activiteiten binnen de computer. Software zoals het besturingssysteem en applicaties bepalen welke taken de computer uitvoert tijdens de verwerking.</p>
 <p>4. Opslag (Storage):</p>
-<p>Opslag is het proces waarbij gegevens op lange termijn worden bewaard, zodat ze kunnen worden opgeroepen en opnieuw kunnen worden gebruikt wanneer dat nodig is. Computers hebben verschillende soorten opslagapparaten, zoals harde schijven, solid-state drives (SSD's), USB-stations en optische schijven. Deze apparaten slaan gegevens op in de vorm van elektrische ladingen, magnetische signalen of andere fysieke representaties. Het opgeslagen geheugen kan worden gebruikt om bestanden, programma's en systeeminformatie op te slaan.</p>
-
+<p> Opslag verwijst naar het proces van het bewaren van gegevens voor een lange periode, zodat ze kunnen worden opgehaald en kunnen worden gebruikt wanneer dat nodig is. Computers gebruiken verschillende types van opslagapparaten, zoals harde schijven, SSD’s, USB-sticks. Opgeslagen computers kunnen worden gebruikt voor het opslaan van bestanden, programma’s en systeeminformatie.</p>
 <p>Lees meer over CPU op deze <a href="https://wikikids.nl/CPU" target="_blank">pagina</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QZwneRb-zqA" frameborder="0" allowfullscreen></iframe>
