--- a/CPU.html
+++ b/CPU.html
@@ -47,7 +47,7 @@
 <p> Opslag verwijst naar het proces van het bewaren van gegevens voor een lange periode, zodat ze kunnen worden opgehaald en kunnen worden gebruikt wanneer dat nodig is. Computers gebruiken verschillende types van opslagapparaten, zoals harde schijven, SSD’s, USB-sticks. Opgeslagen computers kunnen worden gebruikt voor het opslaan van bestanden, programma’s en systeeminformatie.</p>
 <p>Lees meer over CPU op deze <a href="https://wikikids.nl/CPU" target="_blank">pagina</a>.</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/QZwneRb-zqA" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/f-Tu7OLK3fY?si=90mE1oPn4MTsmBJr" frameborder="0" allowfullscreen></iframe>
 
 <img src="werking.jpg" width="300px" height="300px">
 </body>
