--- a/fysiekelaag.html
+++ b/fysiekelaag.html
@@ -44,30 +44,21 @@
     1. RAM 
     <br>
     <br>
-    De volledige vorm van RAM is Random Access Memory. De informatie die in dit type geheugen is opgeslagen, gaat verloren wanneer de stroomtoevoer naar de pc of laptop wordt uitgeschakeld. De informatie die in het RAM is opgeslagen, kan worden gecontroleerd met behulp van BIOS. Het is algemeen bekend als het hoofdgeheugen of het tijdelijke geheugen, het cachegeheugen of het vluchtige geheugen van het computersysteem
+    De volledige naam van RAM is Random Access Memory. het is een soort korte termijn geheugen in computers en andere digitale apparaten. RAM speelt een belangrijke rol in de prestaties van een computer of telefoon doordat het snelle, kortdurende opslagruimte biedt voor gegevens en programma's die gebruikt worden op het apparaat.
     <br>
     <br>
-    Statisch RAM-geheugen
+    De functie van RAM 
     <br>
     <br>
-    Statisch RAM is de volledige vorm van SRAM. In dit type RAM worden gegevens opgeslagen met behulp van de toestand van een geheugencel met zes transistoren. Statisch RAM wordt meestal gebruikt als cachegeheugen voor de processor (CPU).
-    <br>
-    <br>
-    Dynamisch RAM
-    <br>
-    <br>
-    DRAM staat voor Dynamic Random Access Memory. Het is een type RAM waarmee u elk bit aan gegevens in een afzonderlijke condensator binnen een specifiek geïntegreerd circuit kunt opslaan. Dynamisch RAM is een standaard computergeheugen van de vele moderne desktopcomputers.
-<br>
-<br>
-Dit type RAM is een vluchtig geheugen dat regelmatig van spanning moet worden voorzien. Anders verliest het de informatie die erop is opgeslagen
+    RAM slaat tijdelijk gegevens op die de processor direct nodig heeft. Dit kunnen gegevens zijn van het besturingssysteem, de apps die de gebruiker gebruikt of de bestanden waaraan gewerkt wordt. Door deze gegevens in het snelle geheugen van RAM op te slaan, kan de processor snel toegang krijgen zonder telkens naar de trager werkende harde schijf te hoeven zoeken. Dit zorgt ervoor dat programma's vlotter draaien en dat je soepeler kan multitasken  
     <br>
     <br>
     2. Randapparatuur
     <br>
     
-    Onder randapparatuur vallen allerlei apparaten die voor een bepaalde ondersteunende taak kunnen worden verbonden met computers, laptops en andere systemen. In theorie zouden computers kunnen werken zonder randapparaten. In de praktijk is randapparatuur onmisbaar voor de interactie met de gebruiker en het uitwisselen, archiveren en presenteren van informatie.
+    Onder randapparatuur vallen allerlei apparaten die voor een bepaalde ondersteunende taak kunnen worden verbonden met computers, laptops en andere systemen. In theorie zouden computers kunnen werken zonder randapparaten, maar veel mensen gebruiken het wel. Veel mensen vinden het fijner en makkelijker om randappratuur te gebruiken als een iets op de computer doen.
 
-Meestal is randapparatuur naast of in de directe omgeving van een computersysteem geplaatst en gebruikt. De apparatuur wordt verbonden via een kabel (zoals USB of ethernet) of een draadloze verbinding (zoals BlueTooth). De poorten waarmee deze verbindingen worden aangesloten kunnen rechtstreeks of met behulp van uitbreidingsmodules verbonden zijn met het moederbord. Ook bepaalde apparatuur die in een systeem kan worden ingebouwd kan worden gezien als randapparatuur.
+Meestal is randapparatuur naast of in de directe omgeving van een computersysteem geplaatst en gebruikt. De apparatuur wordt verbonden via een kabel (zoals USB of ethernet) of een draadloze verbinding (zoals BlueTooth). Ook bepaalde apparatuur die in een systeem kan worden ingebouwd kan worden gezien als randapparatuur.
 <br>
 <br> 
    3. Processor 
@@ -81,7 +72,7 @@ Hoe werkt de processor?
 <br>
 Stel: je opent een foto in je galerij. Deze handeling wordt ontvangen door de processor en opgeslagen in het geheugen van je toestel; de ophaalfase. Vervolgens wordt de handeling vertaald naar eentjes en nulletjes in de decodeerfase. De instructies zijn nu opgeslagen in een taal die jouw smartphone begrijpt. In de uitvoerfase zendt de processor de eentjes en nulletjes uit en jij ziet het allemaal gebeuren op je scherm; je foto wordt geopend. Tot slot worden de uitgevoerde instructies opgeslagen in het registergeheugen in de opslagfase. Daarna zal het proces weer opnieuw starten.
 
-<p>Lees meer over de fysiekelaag op deze <a href="https://nl.wikipedia.org/wiki/Fysieke_laag" target="_blank">pagina</a>.</p>
+<p>Lees meer over de RAM op deze <a href="https://www.computerreparatiecenter.nl/wat-houdt-ram-in-random-access-memory" target="_blank">pagina</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qPAlct6S2Xg?si=9W5DpBrqsqfvOyEr" frameborder="0" allowfullscreen></iframe>
 
