--- a/geheugen.html
+++ b/geheugen.html
@@ -63,7 +63,7 @@ RAM (Random Access Memory). Het word gebruikt om processen en apps te ondersteun
 <br>
 De opslag is de plek waar al je fotos , video’s, apps en andere bestanden worden opgeslagen. De mate waarin het word gemeten is ook GB (Gigabite). Hoeveel GB je hebt verschilt per telefoon hele nieuwe of dure telefoon hebben vaak veel GB (128GB of 256GB), dus kan je veel fotos opslaan. Oudere en goedkopere telefoon hebben vaak niet veel GB (32 of 64 GB) en die kunnen dus niet veel fotos opslaan.
 
-<p>Lees meer over het geheugen op deze <a href="https://www.belsimpel.nl/info/dossiers/telefoongeheugen#:~:text=Het%20opslaggeheugen%20wordt%20ook%20wel,4%20GB%20tot%20128%20GB." target="_blank">pagina</a>.</p>
+<p>Lees meer over het geheugen op deze <a href="https://www.gsmacties.nl/info/geheugen/" target="_blank">pagina</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0X4aRnrrUDY?si=qtcXQ3RCkCxoHx1g" frameborder="0" allowfullscreen></iframe>
 
