--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
  Hoi ik ben Nol van Reijn en ben 16 jaar oud. Ik maak deze website voor een opdracht van informatica. Ik zit op het vlietlandcollege. De website word altijd verbeterd dus het kan iedere keer verandert zijn als je er weer bent. 
  
  
- versie 1.73
+ versie 1.74
  
- <img src="afbeelding welkom.jpg" width="300px" height="300px"
+ <img src="afbeelding welkom.jpg" width="300px" height="300px" > 
 
-
- <img src="tekening telefoon.jpg" alt="Tekening van een telefoon">
+ <img src="tekening telefoon.jpg" width="300px" height="300" >
 
 
     
